--- a/style.css
+++ b/style.css
@@ -9,6 +9,12 @@ body {
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
+
+}
+
+#defaultCanvas0{
+  width: auto!important;
+  height: auto!important;
 }
 
 
